k8s/prod/www.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www
spec:
  template:
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: www
          command: ['yarn', 'start']
