k8s/prod/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: seandonmooy
  labels:
    app: seandonmooy
  annotations:
    kubernetes.io/ingress.class: caddy
spec:
  tls:
    - hosts:
        - seandonmooy.com
  rules:
    - host: seandonmooy.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: www
                port:
                  number: 8080
